Add method get vacation
